fix: z-index

--- a/pragma-ui/src/components/Navigation/styles.module.scss
+++ b/pragma-ui/src/components/Navigation/styles.module.scss
@@ -28,6 +28,7 @@
     flex: 1 0 0;
     align-self: stretch;
     height: 90vh;
+    z-index: 20;
 }
 
 .input {
